[workspace]
resolver = "2"
members = [
    "crates/svm-unit-test",
    "crates/svm-unit-test-macros",
    "examples/curve-bench",
]
exclude = [
    "examples/curve-bench/target",
]

[workspace.package]
version    = "0.1.5"
edition    = "2024"
license    = "MIT"
repository = "https://github.com/blueshift-gg/svm-unit-test"

[workspace.dependencies]
# `path` is used for local development; `version` is what gets published to
# crates.io (cargo strips the path on `cargo publish`). The `=` prefix locks
# the runtime to the matching macros version — without it the resolver is
# free to pair a fresh runtime with a stale published macros (or vice versa)
# and you get "cannot find function `…`" errors in macro-expanded code.
# Bump these in lockstep with workspace.package.version on every release.
svm-unit-test         = { path = "crates/svm-unit-test",        version = "=0.1.5" }
svm-unit-test-macros  = { path = "crates/svm-unit-test-macros", version = "=0.1.5" }

syn         = { version = "2", features = ["full", "extra-traits"] }
quote       = "1"
proc-macro2 = "1"

mollusk-svm       = "0.12.1-agave-4.0"
solana-address     = "2.6.0"
solana-instruction = "3"
pathdiff          = "0.2"
