[package]
name = "svm-unit-test-types"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
# Re-exported so that `#[svm_test]` / `#[svm_harness]` resolve under the
# same `svm_unit_test::` path on both the host (where this crate is
# re-exported by `svm-unit-test`) and the SBPF cdylib (where this crate
# IS `svm-unit-test`, via Cargo's `package` rename in the per-test
# Cargo.toml that the builder generates).
svm-unit-test-macros.workspace = true
